docs-archive/apache-airflow-providers-microsoft-azure/12.10.0/_sources/_api/airflow/providers/microsoft/azure/hooks/msgraph/index.rst.txt
airflow.providers.microsoft.azure.hooks.msgraph
===============================================

.. py:module:: airflow.providers.microsoft.azure.hooks.msgraph


Attributes
----------

.. autoapisummary::

   airflow.providers.microsoft.azure.hooks.msgraph.PaginationCallable


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.hooks.msgraph.DefaultResponseHandler
   airflow.providers.microsoft.azure.hooks.msgraph.KiotaRequestAdapterHook


Functions
---------

.. autoapisummary::

   airflow.providers.microsoft.azure.hooks.msgraph.execute_callable


Module Contents
---------------

.. py:data:: PaginationCallable

.. py:function:: execute_callable(func, *args, **kwargs)

   Dynamically call a function by matching its signature to provided args/kwargs.


.. py:class:: DefaultResponseHandler

   Bases: :py:obj:`kiota_abstractions.response_handler.ResponseHandler`


   DefaultResponseHandler returns JSON payload or content in bytes or response headers.


   .. py:method:: get_value(response)
      :staticmethod:



   .. py:method:: handle_response_async(response, error_map)
      :async:


      Invoke this callback method when a response is received.

      param response: The type of the native response object.
      param error_map: The error dict to use in case of a failed request.



.. py:class:: KiotaRequestAdapterHook(conn_id = default_conn_name, timeout = None, proxies = None, host = None, scopes = None, api_version = None)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   A Microsoft Graph API interaction hook, a Wrapper around KiotaRequestAdapter.

   https://github.com/microsoftgraph/msgraph-sdk-python-core

   :param conn_id: The HTTP Connection ID to run the trigger against.
   :param timeout: The HTTP timeout being used by the KiotaRequestAdapter (default is None).
       When no timeout is specified or set to None then no HTTP timeout is applied on each request.
   :param proxies: A Dict defining the HTTP proxies to be used (default is None).
   :param host: The host to be used (default is "https://graph.microsoft.com").
   :param scopes: The scopes to be used (default is ["https://graph.microsoft.com/.default"]).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as "v1.0" or "beta".


   .. py:attribute:: DEFAULT_HEADERS


   .. py:attribute:: DEFAULT_SCOPE
      :value: 'https://graph.microsoft.com/.default'



   .. py:attribute:: cached_request_adapters
      :type:  dict[str, tuple[str, kiota_abstractions.request_adapter.RequestAdapter]]


   .. py:attribute:: conn_type
      :type:  str
      :value: 'msgraph'



   .. py:attribute:: conn_name_attr
      :type:  str
      :value: 'conn_id'



   .. py:attribute:: default_conn_name
      :type:  str
      :value: 'msgraph_default'



   .. py:attribute:: hook_name
      :type:  str
      :value: 'Microsoft Graph API'



   .. py:attribute:: conn_id
      :value: 'msgraph_default'



   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: proxies
      :value: None



   .. py:attribute:: host
      :value: None



   .. py:attribute:: api_version


   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:method:: resolve_api_version_from_value(api_version, default = None)
      :staticmethod:



   .. py:method:: get_api_version(config)


   .. py:method:: get_host(connection)


   .. py:method:: get_base_url(host, api_version, config)


   .. py:method:: format_no_proxy_url(url)
      :staticmethod:



   .. py:method:: to_httpx_proxies(proxies)
      :classmethod:



   .. py:method:: to_msal_proxies(authority, proxies)


   .. py:method:: get_conn()

      Initiate a new RequestAdapter connection.

      .. warning::
         This method is deprecated.



   .. py:method:: get_async_connection(conn_id)
      :classmethod:

      :async:



   .. py:method:: get_async_conn()
      :async:


      Initiate a new RequestAdapter connection asynchronously.



   .. py:method:: get_proxies(config)


   .. py:method:: get_credentials(login, password, config, authority, verify, proxies)


   .. py:method:: test_connection()

      Test HTTP Connection.



   .. py:method:: default_pagination(response, url = None, query_parameters = None, responses = lambda: [])
      :staticmethod:



   .. py:method:: run(url = '', response_type = None, path_parameters = None, method = 'GET', query_parameters = None, headers = None, data = None)
      :async:



   .. py:method:: paginated_run(url = '', response_type = None, path_parameters = None, method = 'GET', query_parameters = None, headers = None, data = None, pagination_function = None)
      :async:



   .. py:method:: send_request(request_info, response_type = None)
      :async:



   .. py:method:: request_information(url, response_type = None, path_parameters = None, method = 'GET', query_parameters = None, headers = None, data = None)


   .. py:method:: normalize_url(url)
      :staticmethod:



   .. py:method:: encoded_query_parameters(query_parameters)
      :staticmethod:



   .. py:method:: error_mapping()
      :staticmethod:



